fixed text wrap issue with long sentences in pre elements in firefox

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -99,6 +99,7 @@ li li {
 
 pre {
   word-wrap: break-word;
+  white-space: pre-wrap;
   background: $gray-93;
   padding: $baseline-height / 2;
   color: $gray-23;
