--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ li li {
 /* Markup styles */
 pre {
   word-wrap: break-word;
+  white-space: pre-wrap;
   background: #ededed;
   padding: 0.75em;
   color: #3a3a3a;
